<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView_elBurritoFavorite"
        android:layout_width="200dp"
        android:layout_height="42dp"
        android:layout_marginTop="200dp"
        android:text="@string/el_burrito_favorite"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/textView_chinaOneBuffetFavorite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_chinaOneBuffetFavorite"
        android:layout_width="200dp"
        android:layout_height="42dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="550dp"
        android:text="@string/china_one_buffet_favorite"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_elBurritoFavorite" />

    <TextView
        android:id="@+id/textView_cheesecakeFactoryFavorite"
        android:layout_width="200dp"
        android:layout_height="42dp"
        android:layout_marginTop="40dp"
        android:text="@string/cheesecake_factory_favorite"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_chinaOneBuffetFavorite" />

    <TextView
        android:id="@+id/textView_ginzaFavorite"
        android:layout_width="200dp"
        android:layout_height="42dp"
        android:layout_marginTop="40dp"
        android:text="@string/ginza_favorite"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_cheesecakeFactoryFavorite" />
</androidx.constraintlayout.widget.ConstraintLayout>